--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 350px;
+    margin-right: 350px;
     background-color: lightgreen;
 }
 h1 {
@@ -16,5 +16,44 @@ figure {
     grid-row-gap: 0px;
     }
 nav {
-    margin-left: 100px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-top: 2px black solid;
+    border-bottom: 2px black solid;    
 }
+.lineage {
+margin-left: 50px;
+text-align: center;
+}
+.tips{
+margin-left: 50px;
+text-align: center;
+
+}
+.mygoats {
+margin-left: 50px;
+
+}
+.boss {
+    margin-left: 75px;
+}
+fieldset {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .tagid { grid-area: 1 / 1 / 2 / 2;
+        display: block;
+     }
+    .breeder { grid-area: 1 / 2 / 2 / 3; }
+    .dob { grid-area: 2 / 1 / 3 / 2; }
+    .sex { grid-area: 2 / 2 / 3 / 3; }
+    .bbreed { grid-area: 3 / 1 / 4 / 2; }
+    .buckid { grid-area: 3 / 2 / 4 / 3; }
+    .dbreed { grid-area: 4 / 1 / 5 / 2; }
+    .doeid { grid-area: 4 / 2 / 5 / 3; }
+    .name { grid-area: 5 / 1 / 6 / 2; }
+    .addinfo { grid-area: 5 / 2 / 6 / 3; }
